# the_ark

./: .gitignore  BiologicalService.cpp  BiologicalService.h  CMakeLists.txt  EmergencyService.cpp  EmergencyService.h  Emergency_Log.txt  Enums.cpp  Human.cpp  Human.h  Interface.cpp  Interface.h  MedicalService.cpp  MedicalService.h  NavigationBlock.cpp  NavigationBlock.h  NavigationService.cpp  NavigationService.h  Population.cpp  Population.csv  Population.h  README.md  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Resources.cpp  Resources.h  Service.h  SocialService.cpp  SocialService.h  TechnicalService.cpp  TechnicalService.h  TheArk.cpp  TheArk.h  main.cpp  test_000.cfg  test_001.cfg
EmergencyService_setup/: ES_Setup.py  Emergency_compiler.py  README.txt  coefficients.txt  e_ids.txt  input.csv  lower_func.m  output.txt  probabilities.txt  show.m  upper_func.m
Logs/: Emergency_Log.txt  Main_Log.txt
plots/: incidents.py  plots.py
texts/emergency/: Biological.txt  Emergency.txt  Medical.txt  Navigation.txt  README.txt  Social.txt  Technical.txt
the_ark_bot/: TheArk.py  plots.py
the_ark_bot/media/: texts.txt
